// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grocery renders base form when props.editForm is false 1`] = `
<div>
  <div
    class="form-group"
  >
    <label
      class="form-label"
      for="product"
    >
      Product
    </label>
    <input
      class="form-control"
      id="product"
      name="product"
      placeholder="apples"
      type="text"
      value="foo"
    />
    
  </div>
  <div
    class="form-group"
  >
    <label
      class="form-label"
      for="quantity"
    >
      Quantity
    </label>
    <input
      class="form-control"
      id="quantity"
      name="quantity"
      placeholder="3 bags"
      type="text"
      value="2 bar"
    />
    
  </div>
  <div
    class="form-group"
  >
    <label
      class="form-label"
      for="category"
    >
      Category
    </label>
    <input
      class="form-control"
      id="category"
      list="categories"
      name="category"
      type="text"
      value="foo"
    />
    <datalist
      id="categories"
    >
      <option
        value="foo"
      />
      <option
        value="bar"
      />
    </datalist>
    
  </div>
</div>
`;

exports[`Grocery renders edit form when props.editForm is true 1`] = `
<div>
  <div
    class="form-group"
  >
    <label
      class="form-label"
      for="product"
    >
      Product
    </label>
    <input
      class="form-control"
      id="product"
      name="product"
      placeholder="apples"
      type="text"
      value="foo"
    />
    
  </div>
  <div
    class="form-group"
  >
    <label
      class="form-label"
      for="quantity"
    >
      Quantity
    </label>
    <input
      class="form-control"
      id="quantity"
      name="quantity"
      placeholder="3 bags"
      type="text"
      value="2 bar"
    />
    
  </div>
  <div
    class="form-group"
  >
    <label
      class="form-label"
      for="category"
    >
      Category
    </label>
    <input
      class="form-control"
      id="category"
      list="categories"
      name="category"
      type="text"
      value="foo"
    />
    <datalist
      id="categories"
    >
      <option
        value="foo"
      />
      <option
        value="bar"
      />
    </datalist>
    
  </div>
  <div
    class="mb-3 form-group"
  >
    <div
      class="form-check"
    >
      <input
        class="form-check-input"
        id="purchased"
        name="purchased"
        type="checkbox"
      />
      <label
        class="form-check-label"
        for="purchased"
        title=""
      >
        Purchased
      </label>
    </div>
  </div>
</div>
`;
